Bug 1107943 - The maker sidebar has some annoying text spacing, r=jsantell
UltraBlame original commit: 991e31a301395e3d5e7f4b275a4c3761f4171d60

--- a/browser/themes/shared/devtools/timeline.inc.css
+++ b/browser/themes/shared/devtools/timeline.inc.css
@@ -938,17 +938,33 @@ important
 ;
 }
 #
-timeline
--
 waterfall
 -
 details
 {
+-
+moz
+-
+padding
+-
+start
+:
+8px
+;
+-
+moz
+-
+padding
+-
+end
+:
+8px
+;
 padding
 -
 top
 :
-28px
+8vh
 ;
 overflow
 :
@@ -985,6 +1001,49 @@ border
 radius
 :
 1px
+;
+}
+.
+marker
+-
+details
+-
+start
+.
+marker
+-
+details
+-
+end
+.
+marker
+-
+details
+-
+duration
+{
+padding
+-
+top
+:
+3px
+;
+}
+.
+marker
+-
+details
+-
+labelname
+{
+-
+moz
+-
+padding
+-
+end
+:
+4px
 ;
 }
 .
